# WA-LLE

./: .gitignore  CMakeLists.txt  README.md  gait_detection.txt  instructions.txt  launcher.launch  package.xml  requirements.txt
Arduino/differential_braking/: Differential_braking_complete.ino  Encoder_interrupt_test_code.ino  HCR_stepper_control.ino
fall_detection_data/data_011217/: fall_data_0.csv  fall_data_1.csv  fall_data_2.csv  fall_data_3.csv  fall_data_4.csv  fall_data_5.csv  fall_data_6.csv  fall_data_7.csv  fall_data_8.csv  fall_data_agg.xlsx  fall_data_agg_2.xlsx  ~$fall_data_agg.xlsx
fall_detection_data/data_301117/: fall_data_6.csv  fall_detection_data_0.csv  fall_detection_data_1.csv  fall_detection_data_2.csv  fall_detection_data_3.csv  fall_detection_data_4.csv  fall_detection_data_5.csv
fall_detection_data/data_301117/filtered/: fall_backwards.csv  fall_forwards.csv  normal walking.csv
fall_detection_data/data_301117/filtered/autocorr/: gyr_1.fig  gyr_2.fig  gyr_normal.fig
object_Detection/functionalised_object_detection/sketch_dec10a/: sketch_dec10a.ino
object_Detection/last_tested_object_detection/sketch_nov30b/: sketch_nov30b.ino
old_src/: hcr_gait.cpp  hcr_gait_from_openpose_file.cpp
src/: arduino_send_node.py  dummy_listener.cpp  fall_detection.py  hcr_fall_data_collection.py  hcr_fall_data_collector.py  hcr_fall_detector.py  hcr_fall_detector_trainer.py  hcr_gait.cpp  hcr_gait_test_listener.cpp  hcr_imu.cpp  hcr_imu.py  hcr_openpose_adapter.py  hcr_openpose_file_reader.py
src/panicButton/: .gitignore  config.json  index.js
(+1 files in other folders)
